# kraftfutter_rechner

./: CMakeLists.txt  README.md
binaries/: p1w_kraftfutterrechner.uf2  p2w_kraftfutterrechner.uf2
cmake/: bin2h.cmake
http_content/: 404.html  index.html  internet  internet.html  overview  overview.html  settings  settings.html  style  style.css  test.shtml  test_server.py
include/: FreeRTOSConfig.h  access_point.h  crypto_storage.h  json_helper.h  kraftfutterstation.h  kuhspeicher.h  log_storage.h  lwipopts.h  mbedtls_config.h  mutex.h  persistent_storage.h  settings.h  static_types.h  string_util.h  uart_storage.h  usb_interface.h  webserver.h  wifi_search.h  wifi_storage.h
include/tcp_server/: tcp_server.h
src/: error_hooks.cpp  main.cpp  ntp_client.cpp
